Created graceful API error messages and correct HTTP status code returns.

--- a/tests/Scuttle.API.Tests/Scuttle.API.Tests.csproj
+++ b/tests/Scuttle.API.Tests/Scuttle.API.Tests.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Scuttle\Scuttle.API.csproj" />
+    <ProjectReference Include="..\..\src\Scuttle.API\Scuttle.API.csproj" />
   </ItemGroup>
 
   <ItemGroup>
