--- a/tests/Scuttle.Application.Tests/Scuttle.Application.Tests.csproj
+++ b/tests/Scuttle.Application.Tests/Scuttle.Application.Tests.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Scuttle.Application\Scuttle.Application.csproj" />
+    <ProjectReference Include="..\..\src\Scuttle.Application\Scuttle.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
