--- a/src/Scuttle.Application/Scuttle.Application.csproj
+++ b/src/Scuttle.Application/Scuttle.Application.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\Scuttle.Domain\Scuttle.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Corners\Queries\" />
+  </ItemGroup>
+
 </Project>
